# python-websocketd

./: .gitignore  MANIFEST.in  README.md  builders.js  config.doxygen  requirements.txt  rpc.js  setup.cfg  setup.py  websocketd.py  websockets.py  wshttpd.py
debian/: changelog  control  copyright  python-websockets.install  python3-websocketd-doc.links  python3-websocketd.install  python3-websockets.install  rules
debian/tests/: client.py  server.py  use
example/: client  page.html  server
example/html/: builders.js  index.html  page.js  rpc.js
src/websocketd/: __init__.py  __main__.py  builders.js  rpc.js
