[metadata]
name = websocket-httpd
version = 0.3
author = Bas Wijnen
author_email = wijnen@debian.org
description = module for creating a http server which uses WebSockets
long_description = file:README.md
long_description_content_type = text/markdown
license = AGPL3+
license_files =
	debian/copyright
url = https://github.com/wijnen/python-websocketd
project_urls =
	Bug Tracker = https://github.com/wijnen/python-websocketd/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	Intended Audience :: Developers
	Development Status :: 4 - Beta
	Operating System :: OS Independent
	Topic :: System :: Networking
	Topic :: Internet :: WWW/HTTP :: HTTP Servers

[options]
zip_safe = False
package_dir =
	=src
packages = find:
python_requires = >=3
install_requires =
	fhs-paths
	network-wrapper
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.js
